--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,16 @@
 @charset "utf-8";
+
+/* IMPORT EXTERNAL CSS FILES */
+@import url('skrollr.css');
+@import url('fonts.css');
+@import url('bootstrap-overrides.css');
 /*
     MAIN STYLES STYLESHEET
 */
 body{
     background-color: #000;
     color: #fff;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', Arial, sans-serif;
     font-size: 16px;
 }
 
@@ -13,7 +18,7 @@ body{
 header{
     width: 100%;
     height: 100%;
-    position: fixed;
+    position: absolute;
     top: 0;
     float: left;
     background: url('../images/backgrounds/header-bg.jpg') no-repeat center center;
@@ -36,13 +41,13 @@ header{
 /* HEADER STYLES END */
 
 .bio{
-    margin: 30px 0;
+    margin: 20px 0;
     width: 100%;
     float: left;
     text-align: center;
 }
 .bio .bio-image{
-    margin: 20px auto;
+    margin: 10px auto;
     width: 20%;
 }
 .bio .bio-image img{
@@ -57,6 +62,6 @@ header{
 
 /* ABOUT STYLES START */
 .about{
-    background: rgba(0, 0, 0, 1.0);
+    width: 100%;
 }
 /* ABOUT STYLES END */
